KOC-1664: Prevent non-rendering-borders on ios chrome

--- a/app/components/recipe-card/recipe-card.scss
+++ b/app/components/recipe-card/recipe-card.scss
@@ -9,6 +9,7 @@
         margin-bottom: 6px;
         position: relative;
         overflow: hidden;
+        will-change: transform;
     }
 
     &__image {
